Proyecto1_201122872/src/Analizador/analizador.java
/* Generated By:JJTree&JavaCC: Do not edit this line. analizador.java */
package Analizador;
import java.io.*;
import Funciones.str_codigo;
import java.util.LinkedList;
public class analizador/*@bgen(jjtree)*/implements analizadorTreeConstants, analizadorConstants {/*@bgen(jjtree)*/
  protected JJTanalizadorState jjtree = new JJTanalizadorState();
  public LinkedList<str_codigo> l_codigo= new LinkedList();
  public String cod="";
  public String nombre_f="";

  final public SimpleNode Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Inicio();
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Inicio() throws ParseException {
               /*@bgen(jjtree) Inicio */
  SimpleNode jjtn000 = new SimpleNode(JJTINICIO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      archivo();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  final public void INSTRUCCION() throws ParseException {
                    /*@bgen(jjtree) INSTRUCCION */
  SimpleNode jjtn000 = new SimpleNode(JJTINSTRUCCION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case declarar:
        DECLARAR();
        break;
      case 100:
        ASIGNACION();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

/*   -------------- Instrucciones  ARchivo ---------------------*/
  final public void inst_archivo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case insertar:
      INSERTAR();
      break;
    case borrar:
      BORRAR();
      break;
    case actualizar:
      ACTUALIZAR();
      break;
    case seleccionar:
      SELECCIONAR();
      break;
    case crear:
      CREAR();
      break;
    case eliminar:
      ELIMINAR();
      break;
    case alterar:
      ALTERAR();
      break;
    case usar:
      USAR();
      break;
    case otorgar:
      OTORGAR();
      break;
    case denegar:
      DENEGAR();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void archivo() throws ParseException {
                /*@bgen(jjtree) archivo */
  SimpleNode jjtn000 = new SimpleNode(JJTARCHIVO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      inst_archivo();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case crear:
        case usar:
        case alterar:
        case eliminar:
        case insertar:
        case actualizar:
        case borrar:
        case seleccionar:
        case otorgar:
        case denegar:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_1;
        }
        inst_archivo();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*------------------------ Instrucciones ddl ------------------------------*/
  final public void TIPO() throws ParseException {
                  /*@bgen(jjtree) Tipo */
                  SimpleNode jjtn000 = new SimpleNode(JJTTIPO);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TEXT:
        t = jj_consume_token(TEXT);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
               jjtn000.setName(t.image);
        break;
      case INTEGER:
        t = jj_consume_token(INTEGER);
                 jjtree.closeNodeScope(jjtn000, true);
                 jjtc000 = false;
                 jjtn000.setName(t.image);
        break;
      case DOUBLE:
        t = jj_consume_token(DOUBLE);
                jjtree.closeNodeScope(jjtn000, true);
                jjtc000 = false;
                 jjtn000.setName(t.image);
        break;
      case BOOL:
        t = jj_consume_token(BOOL);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              jjtn000.setName(t.image);
        break;
      case DATETIME:
        t = jj_consume_token(DATETIME);
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                   jjtn000.setName(t.image);
        break;
      case DATE:
        t = jj_consume_token(DATE);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
              jjtn000.setName(t.image);
        break;
      case id:
        t = jj_consume_token(id);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setName(t.image);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void L_ATRIBUTOS() throws ParseException {
                    /*@bgen(jjtree) L_ATRIBUTOS */
  SimpleNode jjtn000 = new SimpleNode(JJTL_ATRIBUTOS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ATRIBUTO();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case coma:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        jj_consume_token(coma);
        ATRIBUTO();
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void ATRIBUTO() throws ParseException {
                 /*@bgen(jjtree) ATRIBUTO */
  SimpleNode jjtn000 = new SimpleNode(JJTATRIBUTO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      TIPO();
      term_id();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void VAR_PARAMETRO() throws ParseException {
                      /*@bgen(jjtree) VAR_PARAMETRO */
  SimpleNode jjtn000 = new SimpleNode(JJTVAR_PARAMETRO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      TIPO();
      jj_consume_token(100);
      term_id();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void L_VAR_PARAMETRO() throws ParseException {
                        /*@bgen(jjtree) L_VAR_PARAMETRO */
  SimpleNode jjtn000 = new SimpleNode(JJTL_VAR_PARAMETRO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      VAR_PARAMETRO();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case coma:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        jj_consume_token(coma);
        VAR_PARAMETRO();
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  final public void L_ELEMENTOS() throws ParseException {
                    /*@bgen(jjtree) L_ELEMENTOS */
  SimpleNode jjtn000 = new SimpleNode(JJTL_ELEMENTOS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ELEMENTO();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case coma:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        jj_consume_token(coma);
        ELEMENTO();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void ELEMENTO() throws ParseException {
                 /*@bgen(jjtree) ELEMENTO */
  SimpleNode jjtn000 = new SimpleNode(JJTELEMENTO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ATRIBUTO();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case nulo:
      case no_nulo:
      case autoincrementable:
      case llave_prim:
      case llave_for:
      case unico:
        COMPLEMENTO();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
